[gd_scene load_steps=12 format=3 uid="uid://dovft48d5oin6"]

[ext_resource type="FontFile" uid="uid://q2ya4cjgw8r0" path="res://assets/text/Minecraft.ttf" id="1"]
[ext_resource type="Script" path="res://scenes/Play Area/PauseUI.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dud1c53jqv7gq" path="res://assets/art/UI/Resume_Idle.png" id="3_qlyn1"]
[ext_resource type="Texture2D" uid="uid://bxqq4ca1r60h6" path="res://assets/art/UI/Resume_Hover.png" id="4_6eje8"]
[ext_resource type="Texture2D" uid="uid://c44omi75aesja" path="res://assets/art/UI/Settings_Idle.png" id="5_8lkw7"]
[ext_resource type="Texture2D" uid="uid://nh4cllk35cwh" path="res://assets/art/UI/Settings_Hover.png" id="6_vaodo"]
[ext_resource type="Texture2D" uid="uid://dt8qp4brr7vdg" path="res://assets/art/UI/GoToMainMenu_Idle.png" id="7_rmo7w"]
[ext_resource type="Texture2D" uid="uid://d0b5odbw3xqat" path="res://assets/art/UI/GoToMainMenu_Hover.png" id="8_d62t1"]

[sub_resource type="Theme" id="Theme_a4lsr"]
default_font = ExtResource("1")

[sub_resource type="Theme" id="Theme_nuvbj"]
default_font = ExtResource("1")

[sub_resource type="Theme" id="Theme_o0u8v"]
default_font = ExtResource("1")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0.65098, 0.654902, 0.658824, 1)

[node name="BlackBar1" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 48.0
color = Color(0, 0, 0, 1)

[node name="BlackBar2" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 552.0
offset_right = 1024.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 207.0
offset_right = 518.0
offset_bottom = 330.0
rotation = -6.42098
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 120
text = "Paused"
horizontal_alignment = 1

[node name="resume" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 576.0
offset_top = 193.0
offset_right = 656.0
offset_bottom = 209.0
scale = Vector2(4, 4)
theme = SubResource("Theme_a4lsr")
texture_normal = ExtResource("3_qlyn1")
texture_hover = ExtResource("4_6eje8")

[node name="settings" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 575.0
offset_top = 281.0
offset_right = 655.0
offset_bottom = 297.0
scale = Vector2(4, 4)
theme = SubResource("Theme_nuvbj")
texture_normal = ExtResource("5_8lkw7")
texture_hover = ExtResource("6_vaodo")

[node name="goToMainMenu" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 575.0
offset_top = 369.0
offset_right = 655.0
offset_bottom = 385.0
scale = Vector2(4, 4)
theme = SubResource("Theme_o0u8v")
texture_normal = ExtResource("7_rmo7w")
texture_hover = ExtResource("8_d62t1")

[connection signal="button_down" from="resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="goToMainMenu" to="." method="_on_goToMainMenu_button_down"]
